--- a/object.html
+++ b/object.html
@@ -13,7 +13,8 @@
             totalNoOfStudents:25,
             teacher:"Munaf Hajir",
             lectureDays:["Monday","Wednesday","Friday"],
-            lectureDuration:"2hrs",
+            lectureDuration:2,
+            durationType:"hour",
         }
 
 
@@ -26,6 +27,7 @@
         delete techpathshalaStudents.lectureDays;
         console.log(techpathshalaStudents.lectureDays);
         console.log(techpathshalaStudents.lectureDuration);
+        console.log(techpathshalaStudents.durationType);
         console.log(techpathshalaStudents);
     </script>
 </body>
