--- a/todo/try.html
+++ b/todo/try.html
@@ -9,8 +9,9 @@
   </style>
 </head>
 <body>
-  <div style="border: 5px solid rgb(12, 11, 11);height: 100px;">
-    <input id="task" style="font-size: 2em;border-radius: 10px;"/>
+  <div style="border: 5px solid rgb(12, 11, 11);height: 100px;padding:50px 30px;
+  background-color: rgb(119, 138, 245);">
+    <input id="task" style="font-size: 2em;border-radius: 10px;">
     <button onclick="addTask()" style="font-size: 2em; padding: 10px 20px;border-radius: 10px;background-color: rgb(72, 64, 64);color: white;
                                        margin: 0px 20px;">Add Task</button>
   </div>
