--- a/calculator/cal.html
+++ b/calculator/cal.html
@@ -8,21 +8,29 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+	width: 100%;
+	height: 100%;
+
+}
 .main{
-height:580px;
-width:auto;
+height:100vh;
+width:100%;
 display: flex;
 align-items: center;
 justify-content: center;
+background-color: rgba(167, 239, 241, 0.623);
+
 }
 
         .calculator {
-	width: 300px;
-	height:400px;
+	width:25vw;
+	height:65vh;
 	background-color: #2533e9;
 	padding: 10px;
 	border-radius: 5px;
-	box-shadow: 5px 5px 10px 2px  rgba(0, 0, 0, 0.507);
+	box-shadow: 5px 5px 10px 2px  rgba(0, 0, 0, 0.507),5px 5px 10px 2px inset rgba(77, 75, 75, 0.507);
     display: grid;
     place-content: center;
     
@@ -90,6 +98,6 @@ justify-content: center;
 	</div>
 </div>
 
-	<script src="script.js"></script>
+	<script src="./script.js"></script>
 </body>
 </html>
